--- a/style.css
+++ b/style.css
@@ -109,7 +109,8 @@ body  {
   color: white;
   border-radius: 5px;
   font-size: 20px;
-  
+  left: 115px;
+  top: 98px;
 }
 
 .tryagainclass {
@@ -118,6 +119,10 @@ body  {
   top: 70px;
   left: 35px;
   font-size: small;
+  background: none;
+  pointer-events: none;
+  white-space: nowrap;
+ 
   
 }
 .createaccounttext{
