--- a/style.css
+++ b/style.css
@@ -73,6 +73,14 @@ body  {
   border: none;
   font-size: 15px;
   display: inline-block;
+  transition: 0.3s;
+}
+.signupsubmit:hover {
+  background-color: #26ae5f;
+  color: white;
+  border-radius: 5px;
+  font-size: 20px;
+  left: 105px;
 }
 .user{
   color: white;
@@ -148,11 +156,17 @@ body  {
   bottom: 20px;
 }
 .logout{
-  color: rgb(252, 0, 0);
+  color: rgb(255, 255, 255);
+  border-radius: 12px;
+  background-color: #c12020;
+  border: none;
+  font-size: 15px;
+  display: inline-block;
   font-size: large;
   position: absolute;
   left: 190px;
   bottom: 150px;
+  transition: 0.3s;
 }
 .gamelogo{
   position: absolute;
