--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,8 @@
+
 #box {
-    width: 1px;
-    margin: 100px auto;
-    background: rgb(0, 0, 0);
+  width: 1px;
+  margin: 100px auto;
+  background: rgb(0, 0, 0);
 }
 
 .notloggedtext{
@@ -46,7 +47,7 @@
 
 body  {
   
-  background-image: url("gamebg2.gif");
+  background-image: url("../Assets/gamebg2.gif");
   background-size: cover;
   overflow-y: hidden;
   overflow-x: hidden;
@@ -67,6 +68,7 @@ body  {
   left: 105px;
   
 }
+
 .signupsubmit{
   position: absolute;
   left: 110px;
@@ -99,13 +101,13 @@ body  {
   right: 63px;
   }
   .passboxretype{
-    position: relative;
+  position: relative;
   right: 60px;
   }
 .email{
-    color: white;
-    position: absolute;
-    right: 235px;
+  color: white;
+  position: absolute;
+  right: 235px;
   }
 .emailbox{
   position: absolute;
@@ -151,15 +153,15 @@ body  {
   background: none;
   pointer-events: none;
   white-space: nowrap;
- 
-  
 }
+
 .createaccounttext{
   color: white;
   position: relative;
   left: 40px;
   top: 20px;
 }
+
 .backtologin{
   color: white;
   position: absolute;
@@ -214,7 +216,6 @@ body  {
 .loginorsignupclass{
   color: white;
   position: absolute;
-  
   left: 130px;
   bottom: 380px;
   font-size: large;
@@ -228,6 +229,7 @@ body  {
   top: 50px;
   white-space: pre-line;
 }
+
 .leaderscore{
   color: red;
   position: absolute;
