--- a/CSS/gamestyle.css
+++ b/CSS/gamestyle.css
@@ -1,13 +1,23 @@
 canvas {
+  
   border: 1px solid #5e5e5e;
   background-color: #000000;
+  display: block;
 }
 
-body  {
-  
+
+html, body {
+  width:  100%;
+  height: 100%;
+  border: 0;
+  margin: 0;
+  overflow: hidden;
   background-color: #000000;
 }
 
 #thevoice{
   display: none;
+}
+#imageID{
+ position: absolute;
 }
