--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,9 +32,9 @@
   */
   background-color: rgb(0, 0, 0);
   
-  left: 40%;
+  right: 50%;
   bottom: 40%;
-  transform: translate(-40%, 0%)
+  transform: translate(0%, 0%)
 }
 .leaderboardbox {
   display: flex;
@@ -45,9 +45,10 @@
   
   /* margin-top: 120px; */
   background-color: rgb(0, 0, 0);
-  left: 62%;
+  left: 40%;
+  
   bottom: 40%;
-  transform: translate(-62%, 0%)
+  transform: translate(10%, 0%)
 }
 
 body  {
@@ -56,6 +57,13 @@ body  {
   background-size: cover;
   overflow-y: hidden;
   overflow-x: hidden;
+}
+.container1{
+  position: absolute;
+  left: 55%;
+  bottom: 20%;
+  
+  transform: translate(-60%, -20%)
 }
 .loginprompt{
   position: relative;
