--- a/CSS/gamestyle.css
+++ b/CSS/gamestyle.css
@@ -1,3 +1,4 @@
+/*Game Canvas Style*/
 canvas {
   
   border: 1px solid #5e5e5e;
@@ -5,7 +6,7 @@ canvas {
   display: block;
 }
 
-
+/*Html Body Style*/
 html, body {
   width:  100%;
   height: 100%;
@@ -15,6 +16,7 @@ html, body {
   background-color: #000000;
 }
 
+/*--------------Game Assets Style---------------*/
 #thevoice{
   display: none;
 }
